# PythonInterpreter

./: .gitignore  README.md  eval.py  history.txt  lexer.py  main.py  parser.py  pyproject.toml  test_eval.py  test_lexer.py  test_parser.py
src/pyinterp/: eval.py  interpreter.py  lexer.py  parser.py
src/pyinterp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
test_files/: test0.py  test1.py
tests/: test_eval.py  test_lexer.py  test_parser.py
