[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyinterp"
version = "1.0.0"
dependencies = [
    "pytest",
]

[project.scripts]
pyinterp = "pyinterp.interpreter:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]